--- a/webapp/src/styles/sidebar.scss
+++ b/webapp/src/styles/sidebar.scss
@@ -30,7 +30,8 @@
 .wrapper {
   display: flex;
   height: 100%;
-  width: 400px;
+  width: 100%;
+  max-width: 400px;
   background-color: $dark-primary;
   --scrollbar-bg: #{$dark-primary};
   --scrollbar-color: #{$dark-highlight};
@@ -39,10 +40,11 @@
 .container {
   width: 100%;
   height: 100%;
-  padding: 20px;
+  padding: 24px;
   margin-left: auto;
-  overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
 }
 
 .logo {
@@ -56,6 +58,68 @@
 
     use {
       width: 100%;
+    }
+  }
+}
+
+.contents {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  padding: 24px 8px;
+}
+
+.section-title {
+  display: flex;
+  align-items: center;
+  font-weight: 600;
+  font-size: 18px;
+  padding: 8px;
+
+  span {
+    margin: 0 16px;
+    flex: 1;
+  }
+
+  &:not(:first-child) {
+    margin-top: 16px;
+  }
+}
+
+.section-item {
+  display: flex;
+  align-items: center;
+  padding: 4px 8px;
+  margin-bottom: 8px;
+  border-radius: 4px;
+  margin-left: 16px;
+  color: inherit;
+  text-decoration: none;
+  cursor: pointer;
+
+  &:hover {
+    background-color: darken($dark-secondary, 4);
+    text-decoration: none;
+  }
+
+  &.active {
+    background-color: $dark-secondary;
+  }
+}
+
+.footer {
+  color: $text-grey;
+  font-size: 14px;
+
+  div {
+    margin-top: 4px;
+  }
+
+  a {
+    color: inherit;
+
+    + a {
+      margin-left: 16px;
     }
   }
 }
