--- a/webapp/src/styles/vars.scss
+++ b/webapp/src/styles/vars.scss
@@ -34,7 +34,8 @@ $text-normal: #c0c0c0;
 $text-grey: #919191;
 
 $primary: #ff7b1c;
+$pink: #f49898;
 $blue: #1c8cff;
 $green: #2ecc71;
-$pink: #f49898;
+$yellow: #ffd91c;
 $red: #e74c3c;
